--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap");
+
 nav {
   position: fixed;
   top: 0;
@@ -27,4 +29,13 @@ nav ul li a {
   text-decoration: none;
   color: #e4e4e4;
   font-weight: 500;
+}
+.logo {
+  font-family: "Ubuntu Mono";
+  font-weight: 900;
+  font-size: 1.9rem;
+  color: #045757;
+}
+.logo:hover {
+  color: #e4e4e4;
 }
