--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -24,6 +24,9 @@ nav ul {
 nav ul li {
   list-style-type: none;
   margin: 0 10px 0 10px;
+  text-decoration: none;
+  color: #e4e4e4;
+  font-weight: 500;
 }
 nav ul li a {
   text-decoration: none;
@@ -41,6 +44,7 @@ nav ul li a {
 }
 form input {
   border: none;
+  outline: none;
   border-bottom: 1px solid #e4e4e4;
   border-radius: 10px;
 
@@ -49,4 +53,41 @@ form input {
 form input:focus {
   outline: none;
   background-color: #044343;
+}
+li .ol {
+  margin: 10px 0 0px -30px;
+  background: #045757;
+  position: absolute;
+  /* width: 100%; */
+  height: 100px;
+
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  /* color: #222222; */
+}
+li .ol li {
+  text-align: center;
+  margin-left: -30px;
+}
+li .ol li a {
+  color: #222222;
+}
+active-ol {
+  display: flex;
+}
+form button {
+  margin-left: 10px;
+  border: none;
+  /* padding: 10px; */
+  background: #e4e4e4;
+}
+button i {
+  font-weight: 900;
+  color: #045757;
+}
+button i .fa {
+  font-size: 2rem;
 }
