--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -81,12 +81,14 @@ li .ol li a {
 .times {
   display: none;
 }
-
+.toggle {
+  display: none;
+}
 @media screen and (max-width: 900px) {
   nav {
     width: -100vw;
     height: 100vh;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
@@ -105,5 +107,22 @@ li .ol li a {
   }
   .times {
     display: flex;
+    position: fixed;
+    top: 30px;
+    right: 20px;
+    display: flex;
+    font-size: 2.5rem;
+    color: #e4e4e4;
+    font-weight: 900;
+  }
+  .toggle {
+    display: flex;
+    position: fixed;
+    top: 30px;
+    right: 20px;
+    font-size: 2.5rem;
+
+    color: #e4e4e4;
+    font-weight: 900;
   }
 }
