--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -87,6 +87,8 @@ li .ol li a {
 @media screen and (max-width: 900px) {
   nav {
     width: -100vw;
+    z-index: 5;
+
     height: 100vh;
     display: none;
     flex-direction: column;
@@ -109,6 +111,7 @@ li .ol li a {
     display: flex;
     position: fixed;
     top: 30px;
+    z-index: 10;
     right: 20px;
     display: flex;
     font-size: 2.5rem;
@@ -119,6 +122,8 @@ li .ol li a {
     display: flex;
     position: fixed;
     top: 30px;
+    z-index: 10;
+
     right: 20px;
     font-size: 2.5rem;
 
