--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,7 +7,7 @@ nav {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 60px;
+  height: 90px;
   /* background-color: #044343; */
   display: flex;
   flex-direction: row;
@@ -36,7 +36,7 @@ nav ul li a {
 .logo {
   font-family: "Ubuntu Mono";
   font-weight: 900;
-  font-size: 1.9rem;
+  font-size: 2.5rem;
   color: #045757;
 }
 .logo:hover {
@@ -84,6 +84,11 @@ li .ol li a {
 .toggle {
   display: none;
 }
+/* topper */
+
+/* ends */
+
+/* screen max 900 */
 @media screen and (max-width: 900px) {
   nav {
     width: -100vw;
@@ -131,3 +136,4 @@ li .ol li a {
     font-weight: 900;
   }
 }
+/* ends */
