--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,6 +3,7 @@
 nav {
   position: fixed;
   top: 0;
+
   left: 0;
   margin: 0;
   padding: 0;
@@ -92,9 +93,12 @@ li .ol li a {
 @media screen and (max-width: 900px) {
   nav {
     width: -100vw;
+    transition: all 750s ease;
     z-index: 5;
-
+    position: absolute;
+    /* transition: 4s ease-in-out display; */
     height: 100vh;
+    background: #044343;
     display: none;
     flex-direction: column;
     align-items: center;
