--- a/src/components/homepage/home.css
+++ b/src/components/homepage/home.css
@@ -13,4 +13,25 @@
 }
 .grab {
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 2px 2px 2px 2px rgb(0, 0, 0.3);
+  color: #fff;
+  max-width: 600px;
+  border-radius: 5px;
+}
+.btns button {
+  border-radius: 5px;
+  padding: 5px 20px;
+  margin: 5px;
+  background-color: transparent;
+  border: 1px solid #044343;
+  color: #fff;
+  font-size: 1.5rem;
+}
+button:hover {
+  background-color: #222222;
 }
