--- a/src/components/homepage/home.css
+++ b/src/components/homepage/home.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
   text-align: center;
   box-shadow: 2px 2px 2px 2px rgb(0, 0, 0.3);
   color: #fff;
@@ -33,5 +34,14 @@
   font-size: 1.5rem;
 }
 button:hover {
-  background-color: #222222;
+  background-color: #045757;
+}
+.texthome h1 {
+  font-family: "Ubuntu";
+  font-weight: 900;
+  font-size: 2.5rem;
+  text-transform: capitalize;
+}
+button:first-child {
+  background-color: #045757;
 }
