--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -44,11 +44,12 @@ nav ul li a {
   color: #e4e4e4;
 }
 li .ol {
-  margin: 10px 0 0px -30px;
+  margin: 5px 0 0px -30px;
   background: #045757;
   position: absolute;
   /* width: 100%; */
   height: 100px;
+  transition: all 5s ease;
 
   display: none;
   flex-direction: column;
@@ -57,12 +58,28 @@ li .ol {
 
   /* color: #222222; */
 }
+
+.f:hover ol {
+  display: flex;
+  transition: all 5s ease;
+}
+ol:hover {
+  display: flex;
+  transition: all 5s ease;
+}
+ol:focus {
+  display: flex;
+  transition: all 5s ease;
+}
+.f:focus ol {
+  display: flex;
+}
 li .ol li {
   text-align: center;
   margin-left: -30px;
 }
 li .ol li a {
-  color: #222222;
+  color: #e4e4e4;
 }
 .icons {
   display: flex;
