--- a/src/components/homepage/home.css
+++ b/src/components/homepage/home.css
@@ -1,7 +1,7 @@
 .home-container {
   display: flex;
   flex: row;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   height: 100vh;
