--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,7 +7,7 @@ nav {
   left: 0;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 100vw;
   height: 90px;
   /* background-color: #044343; */
   display: flex;
